package br.edu.biblioteca.model;

/**
 * Interface para padronizar entidades que possuem identificador único.
 *
 * (Critério de avaliação: uso de interface Java no projeto final.)
 */
public interface Identificavel {
    String getId();
}
